TEST_PROGRAMS/INVALID/teng_long/bad_2.min
# ';' after endif

if x then
  x = 10;
endif;

